--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UMAP1">
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDpzOsEbXdjQLVX2x2Il6VthU0bxWs2Mrc"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
